# src/serve/routes/addresses/mod.rs
@@ -6,6 +6,7 @@ pub mod specific_charm_utxos;
 pub mod specific_rune_balance;
 pub mod specific_rune_utxos;
 pub mod tx_count_by_address;
+pub mod txs_by_address;
 pub mod utxos_by_address;
 
 use axum::{Router, routing::get};
@@ -21,6 +22,10 @@ pub fn router() -> Router<AppState> {
         .route(
             "/{address}/tx_count",
             get(tx_count_by_address::addresses_tx_count_by_address),
+        )
+        .route(
+            "/{address}/txs",
+            get(txs_by_address::addresses_txs_by_address),
         )
         .route(
             "/{address}/runes/utxos",
